src/test/ui/rust-2018/uniform-paths/ambiguity-nested.stderr
error: import from `std` is ambiguous
  --> $DIR/ambiguity-nested.rs:18:13
   |
LL |       pub use std::io;
   |               ^^^ could refer to external crate `::std`
...
LL | /     mod std {
LL | |         pub struct io;
LL | |     }
   | |_____- could also refer to `self::std`
   |
   = help: write `::std` or `self::std` explicitly instead
   = note: relative `use` paths enabled by `#![feature(uniform_paths)]`

error: aborting due to previous error

